--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
   color: var(--foreground);
   text-align: left; /* لوگو سمت چپ */
 }
-
 .nav-links {
   display: flex;
   gap: 2rem;
   align-items: center;
-  justify-content: flex-end; /* لینک‌ها سمت راست */
-  text-align: right;
-  direction: rtl; /* متن لینک‌ها راست‌چین */
-  transition: transform var(--transition);
+  justify-content: flex-start; /* لینک‌ها سمت چپ */
+  text-align: left;
+  direction: ltr; /* چپ‌چین */
+}
+@media (max-width: 768px) {
+  .nav-links {
+    text-align: left;
+    direction: ltr;
+  }
 }
 
 /* لینک‌ها */
@@ -184,6 +188,14 @@
     direction: rtl;
   }
 }
+.nav {
+  height: 3rem;       /* ارتفاع ثابت */
+  padding: 0.4rem 2rem; /* حالت باریک همیشه */
+}
+
+.nav-logo {
+  transform: scale(0.9); /* لوگو همیشه کوچک */
+}
 
 
   </style>
@@ -276,16 +288,14 @@ toggle.addEventListener('click', ()=>{
   toggle.classList.toggle('open');
 });
 
-// افکت باریک شدن هنگام اسکرول
-window.addEventListener('scroll', ()=>{
-  if(window.scrollY > 50){
-    nav.style.padding = '0.4rem 2rem';
-    logo.style.transform='scale(0.9)';
-  } else {
-    nav.style.padding = '0.6rem 2rem';
-    logo.style.transform='scale(1)';
-  }
-});
+// افکت باریک شدن هنگام اسکرول حذف شد
+const nav = document.querySelector('.nav');
+const logo = document.querySelector('.nav-logo');
+
+// اندازه ثابت
+nav.style.padding = '0.4rem 2rem';  // همیشه حالت باریک
+logo.style.transform = 'scale(0.9)'; // همیشه کوچک شده
+
 
 // 🎨 تغییر رنگ بر اساس سکشن فعال
 const colorThemes = {
