--- a/index.html
+++ b/index.html
@@ -33,113 +33,115 @@
 
     .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
 
-.nav {
-  position: fixed;       /* همیشه روی صفحه ثابت */
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  height: 3rem;
-  padding: 0.4rem 2rem;      /* فاصله از کناره‌ها */
-  display: flex;
-  align-items: center;   /* وسط‌چین عمودی محتوا */
-  background: transparent; 
-  transition: all 0.3s ease;
-}.nav-container {
-  display: flex;
-  justify-content: space-between; /* لوگو سمت چپ، لینک‌ها سمت راست */
-  align-items: center;
-  padding: 0 2rem;
-}
+  .nav {
+    position: fixed;
+    top:0; left:0; right:0;
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+    background: var(--primary-bg);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    transition: all var(--transition);
+  }
 
-.nav-logo {
-  font-weight: 700;
-  font-size: 1.5rem;
-  color: var(--foreground);
-  text-align: right; /* لوگو سمت چپ */
-  transform: scale(0.9);
-}
+  .nav-container {
+    max-width:1200px;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:1rem 2rem;
+  }
 
-.nav-links {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  justify-content: flex-end; /* لینک‌ها سمت راست */
-  text-align: right;
-  direction: rtl; /* متن لینک‌ها راست‌چین */
-  transition: transform var(--transition);
-  
-}
-
-/* لینک‌ها */
-.nav-links a {
-  color: var(--foreground);
-  text-decoration: none;
-  font-weight: 500;
-  position: relative;
-  padding: 0.2rem 0;
-}
-
-/* Underline animation */
-.nav-links {
-  display: none !important;
-}
-
-
-.nav-links a:hover::after,
-.nav-links a.active::after {
-  width: 100%;
-}
-
-.nav-links a:hover {
-  color: var(--accent);
-}
-
-/* Hamburger */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  gap: 5px;
-  cursor: pointer;
-}
-
-.menu-toggle span {
-  display: block;
-  height: 3px;
-  width: 25px;
-  background: var(--foreground);
-  border-radius: 2px;
-  transition: all var(--transition);
-}
-
-/* موبایل */
-@media (max-width: 768px) {
-  .menu-toggle {
-    display: flex;
+  .nav-logo {
+    font-weight:700;
+    font-size:1.6rem;
+    color: var(--primary-color);
+    transition: transform var(--transition);
   }
 
   .nav-links {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 51, 102, 0.95);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    transform: translateX(100%); /* مخفی سمت راست */
-  }
-
-  .nav-links.open {
-    transform: translateX(0); /* وقتی باز شد */
+    display:flex;
+    gap:2rem;
+    align-items:center;
+    position:relative;
   }
 
   .nav-links a {
-    font-size: 1.5rem;
+    color: var(--primary-color);
+    text-decoration:none;
+    font-weight:500;
+    position:relative;
+    padding:0.2rem 0;
+    transition: color var(--transition);
   }
-}
+
+  /* Underline animation */
+  .nav-links a::after {
+    content:'';
+    position:absolute;
+    left:0; bottom:-3px;
+    width:0%; height:2px;
+    background: var(--accent);
+    transition: width var(--transition);
+  }
+
+  .nav-links a:hover::after,
+  .nav-links a.active::after {
+    width:100%;
+  }
+
+  .nav-links a:hover { color: var(--accent); }
+
+  /* Hamburger */
+  .menu-toggle {
+    display:none;
+    flex-direction:column;
+    gap:5px;
+    cursor:pointer;
+  }
+  .menu-toggle span {
+    display:block;
+    height:3px;
+    width:25px;
+    background: var(--primary-color);
+    border-radius:2px;
+    transition: all var(--transition);
+  }
+
+    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
+
+    /* موبایل */
+    @media (max-width: 768px) {
+      nav { flex-wrap: wrap; }
+      .nav-links {
+        display: none; flex-direction: column; width: 100%; text-align: right;
+      }
+      .nav-links.active {
+        display: flex;
+        background: rgba(255,255,255,0.98);
+        padding: 1rem;
+        border-top: 1px solid #eee;
+      }
+      .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+    } 
+    .menu-toggle { display:flex; }
+    .nav-links {
+      position:fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,51,102,0.95);
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      gap:2rem;
+      transform:translateX(-100%);
+      transition: transform var(--transition);
+    }
+    .nav-links.open { transform:translateX(0); }
+  }
+    @media (min-width: 769px) { .menu-toggle { display: none; } }
+
+    main { margin-top: 80px; }
+    section { min-height: 60vh; padding: 4rem 0; }
 
     /* 🌙 Loader */
     #loader {
@@ -172,16 +174,6 @@
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
     }
-
-
-@media (max-width: 768px) {
-  .nav-links {
-    text-align: right;
-    direction: rtl;
-  }
-}
-
-
   </style>
 </head>
 
@@ -196,10 +188,22 @@
 <nav class="nav">
   <div class="nav-container">
     <div class="nav-logo">Sahand Apex</div>
+    <div class="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="nav-links">
+      <a href="#hero">خانه</a>
+      <a href="#introduction">معرفی</a>
+      <a href="#story">داستان</a>
+      <a href="#office">اداری</a>
+      <a href="#petshop">پت‌شاپ</a>
+      <a href="#philosophy">فلسفه</a>
+      <a href="#bio">درباره</a>
+    </div>
   </div>
-</div>
 </nav>
-
 
   <main>
     <div id="hero"></div>
@@ -214,7 +218,9 @@
 
   <script>
     // منوی موبایل
-
+    const toggle = document.querySelector('.menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
+    toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
 
     // بارگذاری هر بخش
     async function loadSection(id, path) {
@@ -246,52 +252,28 @@
       setTimeout(()=>loader.remove(), 600);
     });
   </script>
-  <script>
-const nav = document.querySelector('.nav');
-const toggle = document.querySelector('.menu-toggle');
-const navLinks = document.querySelector('.nav-links');
-const logo = document.querySelector('.nav-logo');
-const links = document.querySelectorAll('.nav a');
+  
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
 
-// منوی موبایل
-toggle.addEventListener('click', ()=>{
-  navLinks.classList.toggle('open');
-  toggle.classList.toggle('open');
-});
+  toggle.addEventListener('click', ()=>{
+    navLinks.classList.toggle('open');
+    toggle.classList.toggle('open');
+  });
 
-
-
-// 🎨 تغییر رنگ بر اساس سکشن فعال
-const colorThemes = {
-  blue: { background: 'rgba(27,79,132,0.9)', color: 'white' },
-  orange: { background: 'rgba(230,126,34,0.9)', color: 'white' },
-  light: { background: 'rgba(255,255,255,0.95)', color: 'hsl(210,100%,20%)' }
-};
-
-function setNavTheme(theme){
-  nav.style.background = colorThemes[theme].background;
-  logo.style.color = colorThemes[theme].color;
-  links.forEach(a => a.style.color = colorThemes[theme].color);
-}
-
-// بخش‌ها
-const allSections = document.querySelectorAll('main > div');
-const observer = new IntersectionObserver((entries)=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      const id = entry.target.id;
-      if(id === 'hero' || id === 'philosophy'){
-        setNavTheme('orange'); // روی آبی → نارنجی
-      } else if(id === 'introduction' || id === 'office' || id === 'petshop' || id === 'bio'){
-        setNavTheme('blue'); // روی سفید → آبی
-      } else {
-        setNavTheme('light');
-      }
+  // Scroll shrink effect
+  const nav = document.querySelector('.nav');
+  window.addEventListener('scroll', ()=>{
+    if(window.scrollY > 50){
+      nav.style.padding = '0.5rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(0.9)';
+    } else {
+      nav.style.padding = '1rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(1)';
     }
   });
-},{threshold:0.4});
-
-allSections.forEach(sec=>observer.observe(sec));
 </script>
+
 </body>
 </html>
