--- a/index.html
+++ b/index.html
@@ -39,115 +39,112 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  height: 3rem;          /* ارتفاع Navbar */
+  height: 1rem;          /* ارتفاع Navbar */
   padding: 0 2rem;       /* فاصله از کناره‌ها */
   display: flex;
   align-items: center;   /* وسط‌چین عمودی محتوا */
   background: transparent; 
   transition: all 0.3s ease;
-}.nav-container {
-  display: flex;
-  justify-content: space-between; /* لوگو سمت چپ، لینک‌ها سمت راست */
-  align-items: center;
-  padding: 0 2rem;
 }
+
+
+
+  .nav-container {
+    max-width:1200px;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    
+  }
 
 .nav-logo {
-  font-weight: 700;
-  font-size: 1.5rem;
-  color: var(--foreground);
-  text-align: left; /* لوگو سمت چپ */
-}
-.nav-links {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  justify-content: flex-start; /* لینک‌ها سمت چپ */
-  text-align: left;
-  direction: ltr; /* چپ‌چین */
-}
-@media (max-width: 768px) {
-  .nav-links {
-    text-align: left;
-    direction: ltr;
-  }
+  font-size: 1rem; /* یا 1rem */
 }
 
-/* لینک‌ها */
-.nav-links a {
-  color: var(--foreground);
-  text-decoration: none;
-  font-weight: 500;
-  position: relative;
-  padding: 0.2rem 0;
-}
-
-/* Underline animation */
-.nav-links a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -3px;
-  width: 0%;
-  height: 2px;
-  background: var(--accent);
-  transition: width var(--transition);
-}
-
-.nav-links a:hover::after,
-.nav-links a.active::after {
-  width: 100%;
-}
-
-.nav-links a:hover {
-  color: var(--accent);
-}
-
-/* Hamburger */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  gap: 5px;
-  cursor: pointer;
-}
-
-.menu-toggle span {
-  display: block;
-  height: 3px;
-  width: 25px;
-  background: var(--foreground);
-  border-radius: 2px;
-  transition: all var(--transition);
-}
-
-/* موبایل */
-@media (max-width: 768px) {
-  .menu-toggle {
-    display: flex;
-  }
 
   .nav-links {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 51, 102, 0.95);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    transform: translateX(100%); /* مخفی سمت راست */
-  }
-
-  .nav-links.open {
-    transform: translateX(0); /* وقتی باز شد */
+    display:flex;
+    gap:2rem;
+    align-items:center;
+    position:relative;
   }
 
   .nav-links a {
-    font-size: 1.5rem;
+    color: var(--primary-color);
+    text-decoration:none;
+    font-weight:500;
+    position:relative;
+    padding:0.2rem 0;
+    transition: color var(--transition);
   }
-}
+
+  /* Underline animation */
+  .nav-links a::after {
+    content:'';
+    position:absolute;
+    left:0; bottom:-3px;
+    width:0%; height:2px;
+    background: var(--accent);
+    transition: width var(--transition);
+  }
+
+  .nav-links a:hover::after,
+  .nav-links a.active::after {
+    width:100%;
+  }
+
+  .nav-links a:hover { color: var(--accent); }
+
+  /* Hamburger */
+  .menu-toggle {
+    display:none;
+    flex-direction:column;
+    gap:5px;
+    cursor:pointer;
+  }
+  .menu-toggle span {
+    display:block;
+    height:3px;
+    width:25px;
+    background: var(--primary-color);
+    border-radius:2px;
+    transition: all var(--transition);
+  }
+
+    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
+
+    /* موبایل */
+    @media (max-width: 768px) {
+      nav { flex-wrap: wrap; }
+      .nav-links {
+        display: none; flex-direction: column; width: 100%; text-align: right;
+      }
+      .nav-links.active {
+        display: flex;
+        background: rgba(255,255,255,0.98);
+        padding: 1rem;
+        border-top: 1px solid #eee;
+      }
+      .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+    } 
+    .menu-toggle { display:flex; }
+    .nav-links {
+      position:fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,51,102,0.95);
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      gap:2rem;
+      transform:translateX(-100%);
+      transition: transform var(--transition);
+    }
+.nav-links.open { transform:translateX(0); }
+@media (min-width: 769px) { .menu-toggle { display: none; } }
+
+
+    section { min-height: 60vh; padding: 4rem 0; }
 
     /* 🌙 Loader */
     #loader {
@@ -181,20 +178,19 @@
       to { transform: rotate(360deg); }
     }
 
-
-@media (max-width: 768px) {
-  .nav-links {
-    text-align: right;
-    direction: rtl;
-  }
+.nav-bottom-bar {
+  position: fixed;
+  top: 1rem;        /* درست زیر Navbar */
+  left: 0;
+  right: 0;
+  height: 1rem;     /* ارتفاع نوار سفید */
+  background: white;
+  z-index: 999;     /* کمی کمتر از Navbar */
 }
-.nav {
-  height: 3rem;       /* ارتفاع ثابت */
-  padding: 0.4rem 2rem; /* حالت باریک همیشه */
-}
-
-.nav-logo {
-  transform: scale(0.9); /* لوگو همیشه کوچک */
+#hero {
+  margin-top: 2rem;            /* 1rem Navbar + 1rem نوار سفید */
+  min-height: 100vh;           /* ارتفاع کل صفحه */
+  background-color: hsl(210, 100%, 20%); /* رنگ آبی */
 }
 
 
@@ -228,7 +224,7 @@
     </div>
   </div>
 </nav>
-
+<div class="nav-bottom-bar"></div>
 
   <main>
     <div id="hero"></div>
@@ -288,14 +284,16 @@ toggle.addEventListener('click', ()=>{
   toggle.classList.toggle('open');
 });
 
-// افکت باریک شدن هنگام اسکرول حذف شد
-const nav = document.querySelector('.nav');
-const logo = document.querySelector('.nav-logo');
-
-// اندازه ثابت
-nav.style.padding = '0.4rem 2rem';  // همیشه حالت باریک
-logo.style.transform = 'scale(0.9)'; // همیشه کوچک شده
-
+// افکت باریک شدن هنگام اسکرول
+window.addEventListener('scroll', ()=>{
+  if(window.scrollY > 50){
+    nav.style.padding = '0.4rem 2rem';
+    logo.style.transform='scale(0.9)';
+  } else {
+    nav.style.padding = '0.6rem 2rem';
+    logo.style.transform='scale(1)';
+  }
+});
 
 // 🎨 تغییر رنگ بر اساس سکشن فعال
 const colorThemes = {
