--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   left: 0;
   right: 0;
   height: 1rem;     /* ارتفاع نوار سفید */
-  background: white;
+  background: hsl(210, 100%, 20%);
   z-index: 999;     /* کمی کمتر از Navbar */
 }
 #hero {
