--- a/index.html
+++ b/index.html
@@ -280,15 +280,15 @@ toggle.addEventListener('click', ()=>{
 });
 
 // افکت باریک شدن هنگام اسکرول
-window.addEventListener('scroll', ()=>{
-  if(window.scrollY > 50){
-    nav.style.padding = '0.4rem 2rem';
-    logo.style.transform='scale(0.9)';
-  } else {
-    nav.style.padding = '0.6rem 2rem';
-    logo.style.transform='scale(1)';
-  }
-});
+// window.addEventListener('scroll', ()=>{
+//   if(window.scrollY > 50){
+//     nav.style.padding = '0.4rem 2rem';
+//     logo.style.transform='scale(0.9)';
+//   } else {
+//     nav.style.padding = '0.6rem 2rem';
+//     logo.style.transform='scale(1)';
+//   }
+// });
 
 // 🎨 تغییر رنگ بر اساس سکشن فعال
 const colorThemes = {
