--- a/hero.html
+++ b/hero.html
@@ -7,21 +7,19 @@
   <div class="float-element float-2"></div>
 
   <div class="hero-content container">
-    <!-- Badge -->
-    <div class="hero-badge fade-in">
-      <span>📦</span>
-      <span>تأمین و واردات B2B</span>
-    </div>
+
 
     <!-- عنوان -->
     <h1 class="hero-title slide-up">
       گروه <br><span class="accent-text">Sahand Apex</span>
     </h1>
 
-    <!-- توضیح کوتاه -->
-    <p class="hero-desc fade-in">
-      تأمین‌کننده و واردکننده محصولات <strong>B2B</strong> در حوزه ملزومات اداری و پت‌شاپ
-    </p>
+    <!-- ت
+        <!-- Badge -->
+    <div class="hero-badge fade-in">
+      <span>📦</span>
+      <span>تأمین‌کننده و واردکننده محصولات <strong>B2B</strong> در حوزه ملزومات اداری و پت‌شاپ</span>
+    </div>
 
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
