--- a/hero.html
+++ b/hero.html
@@ -10,15 +10,20 @@
 
 
     <!-- عنوان -->
-    <h1 class="hero-title slide-up">
-      گروه <br><span class="accent-text">Sahand Apex</span>
-    </h1>
+ <h1 class="hero-title slide-up">
+  گروه <br><span class="accent-text">Sahand Apex</span>
+</h1>
+
+<p class="hero-subtitle slide-up-delay">
+  تجربه‌ای مطمئن در تأمین و واردات محصولات B2B
+</p>
 
     <!-- ت
         <!-- Badge -->
     <div class="hero-badge fade-in">
-      <span>📦</span>
-      <span>تأمین‌کننده و واردکننده محصولات <strong>B2B</strong> در حوزه ملزومات اداری و پت‌شاپ</span>
+<span>⚡</span>
+<span>تأمین سریع، با کیفیت و قابل اعتماد برای رشد کسب‌وکار شما</span>
+
     </div>
 
     <!-- دکمه‌ها -->
