--- a/index.html
+++ b/index.html
@@ -33,86 +33,125 @@
 
     .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
 
+/* ===== Navbar اصلی ===== */
 .nav {
   position: fixed;       /* همیشه روی صفحه ثابت */
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
-  height: 3rem;          /* ارتفاع Navbar */
+  height: 3.5rem;       /* ارتفاع Navbar */
   padding: 0 2rem;       /* فاصله از کناره‌ها */
   display: flex;
   align-items: center;   /* وسط‌چین عمودی محتوا */
-  background: transparent; 
+  background: rgba(255, 255, 255, 0.1); /* شفاف با کمی رنگ */
+  backdrop-filter: blur(10px);         /* بلور پس‌زمینه */
   transition: all 0.3s ease;
 }
 
-
-
-  .nav-container {
-    max-width:1200px;
-    margin:0 auto;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    
-  }
-
-.nav-logo {
-  font-size: 1rem; /* یا 1rem */
+/* ===== کانتینر داخلی ===== */
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;          /* وسط‌چین عمودی */
+  justify-content: flex-start;  /* لینک‌ها سمت چپ */
+  gap: 2rem;                    /* فاصله بین لینک‌ها و لوگو */
+  width: 100%;
 }
 
+/* ===== لوگو ===== */
+.nav-logo {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: hsl(210, 100%, 20%);
+  margin-left: auto;   /* لوگو رو به سمت راست می‌فرسته */
+}
+
+/* ===== لینک‌ها ===== */
+.nav-links {
+  display: flex;
+  gap: 1.8rem;
+  align-items: center;
+}
+
+.nav-links a {
+  color: hsl(210, 100%, 20%);
+  text-decoration: none;
+  font-weight: 500;
+  position: relative;
+  padding: 0.2rem 0;
+  transition: color 0.3s ease;
+}
+
+/* افکت زیرخط هنگام هاور */
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 0%;
+  height: 2px;
+  background: hsl(27, 79%, 52%);
+  transition: width 0.3s ease;
+}
+
+.nav-links a:hover::after,
+.nav-links a.active::after {
+  width: 100%;
+}
+
+.nav-links a:hover {
+  color: hsl(27, 79%, 52%);
+}
+
+/* ===== منوی همبرگر موبایل ===== */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.menu-toggle span {
+  display: block;
+  height: 3px;
+  width: 25px;
+  background: hsl(210, 100%, 20%);
+  border-radius: 2px;
+  transition: all 0.3s ease;
+}
+
+/* ===== موبایل ===== */
+@media (max-width: 768px) {
+  .nav-container {
+    justify-content: space-between;
+  }
 
   .nav-links {
-    display:flex;
-    gap:2rem;
-    align-items:center;
-    position:relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 51, 102, 0.95);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    z-index: 999;
   }
 
-  .nav-links a {
-    color: var(--primary-color);
-    text-decoration:none;
-    font-weight:500;
-    position:relative;
-    padding:0.2rem 0;
-    transition: color var(--transition);
+  .nav-links.open {
+    transform: translateX(0);
   }
 
-  /* Underline animation */
-  .nav-links a::after {
-    content:'';
-    position:absolute;
-    left:0; bottom:-3px;
-    width:0%; height:2px;
-    background: var(--accent);
-    transition: width var(--transition);
-  }
-
-  .nav-links a:hover::after,
-  .nav-links a.active::after {
-    width:100%;
-  }
-
-  .nav-links a:hover { color: var(--accent); }
-
-  /* Hamburger */
   .menu-toggle {
-    display:none;
-    flex-direction:column;
-    gap:5px;
-    cursor:pointer;
+    display: flex;
   }
-  .menu-toggle span {
-    display:block;
-    height:3px;
-    width:25px;
-    background: var(--primary-color);
-    border-radius:2px;
-    transition: all var(--transition);
-  }
-
-    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
+}
 
     /* موبایل */
     @media (max-width: 768px) {
