--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <!-- 🚀 ناوبری -->
 <nav class="nav">
   <div class="nav-container">
-    <div class="nav-logo">Sahand Apex</div>
+    <div class="nav-logo">سهند اپکس</div>
     <div class="menu-toggle">
       <span></span>
       <span></span>
