--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
       <span></span>
       <span></span>
     </div>
+  <div class="nav-links">
+  <a href="#hero">خانه</a>
+  <a href="#introduction">معرفی</a>
+  <a href="#story">داستان</a>
+  <a href="#office">اداری</a>
+  <a href="#petshop">پت‌شاپ</a>
+  <a href="#philosophy">فلسفه</a>
+  <a href="#bio">درباره</a>
+</div>
+
   </div>
 </nav>
 
