--- a/hero.html
+++ b/hero.html
@@ -12,24 +12,25 @@
 
     <!-- عنوان -->
  <h1 class="hero-title slide-up">
-  گروه <br><span class="accent-text">Sahand Apex</span>
+  گروه <br><span class="accent-text">Sahand Apex</span><br>
+تأمین‌کننده و واردکننده تخصصی محصولات پت‌شاپ و ملزومات اداری
 </h1>
 
 <p class="hero-subtitle slide-up-delay">
-  تجربه‌ای مطمئن در تأمین و واردات محصولات B2B
+ ما تأمین می‌کنیم، تا شما با خیال راحت رشد کنید — از پت‌شاپ تا ملزومات اداری
 </p>
 
     <!-- ت
         <!-- Badge -->
     <div class="hero-badge fade-in">
 <span>⚡</span>
-<span>تأمین سریع، با کیفیت و قابل اعتماد برای رشد کسب‌وکار شما</span>
+<span>شریک تجاری برندهایی که به استاندارد، زمان و اعتماد اهمیت می‌دهند.</span>
 
     </div>
 
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
-      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🧰 مشاهده خدمات و محصولات</button>
+      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">همین حالا راهکارهای تأمین سریع و مطمئن Sahand Apex را بررسی کنید</button>
 
 <div class="hero-stats" style="display:flex; justify-content:center; gap:2rem; flex-wrap:wrap; margin-top:3rem;">
   
