--- a/story.html
+++ b/story.html
@@ -8,7 +8,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M12 2a6 6 0 0 0-6 6c0 2.96 2 5.67 4.69 6.48v2.02a1 1 0 0 0 2 0v-2.02C16 13.67 18 10.96 18 8a6 6 0 0 0-6-6z"/></svg>
       </div>
       <h3>شروع ایده</h3>
-      <p>شناسایی نیاز بازار و شکل‌گیری ایده اولیه Sahand Apex.</p>
+      <p>شکل‌گیری ایده‌های نوین برای تأمین کسب‌وکارها توسط Sahand Apex</p>
     </div>
 
     <!-- Card 2 -->
@@ -17,7 +17,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M21 16V8a2 2 0 0 0-1-1.73l-8-4a2 2 0 0 0-2 0l-8 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l8 4a2 2 0 0 0 2 0l8-4A2 2 0 0 0 21 16z"/></svg>
       </div>
       <h3>اولین محصول</h3>
-      <p>راه‌اندازی اولین خط تولید و ارائه محصول با کیفیت.</p>
+      <p>شروع عرضه کالاهای مطمئن و حرفه‌ای Sahand Apex به بازار</p>
     </div>
 
     <!-- Card 3 -->
@@ -26,7 +26,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M3 3v18h18v-2H5V3H3zm15 4v2h-6V7h6zm-3 6v2h-3v-2h3zm6-4v2h-3v-2h3z"/></svg>
       </div>
       <h3>رشد</h3>
-      <p>گسترش واردات و همکاری با کسب‌وکارهای مختلف.</p>
+      <p>پیشرفت در تأمین و همکاری با کسب‌وکارها، با تکیه بر تجربه Sahand Apex</p>
     </div>
 
     <!-- Card 4 -->
@@ -35,7 +35,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M17 3H7v4h10V3zm2 2v6a4 4 0 0 1-4 4h-1v3H10v-3H9a4 4 0 0 1-4-4V5h14z"/></svg>
       </div>
       <h3>موفقیت</h3>
-      <p>دستیابی به اهداف و کسب اعتماد مشتریان و شرکا.</p>
+      <p>حقق اهداف کسب‌وکار و ایجاد اعتماد پایدار با راهکارهای Sahand Apex</p>
     </div>
 
   </div>
