--- a/philosophy.html
+++ b/philosophy.html
@@ -10,12 +10,10 @@
     
     <!-- عنوان بخش -->
     <div class="fadeIn">
-      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem;">فلسفه کاری و ارزش‌ها</h2>
+      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem;">چگونه کیفیت و اعتماد را در خدمات خود تضمین می‌کنیم</h2>
       <div style="width:100px; height:4px; background:hsl(27,79%,52%); margin:0 auto 2.5rem auto; border-radius:1rem;"></div>
       <p style="font-size:1.2rem; color:rgba(255,255,255,0.9); line-height:1.8; max-width:700px; margin:auto;">
-        ما باور داریم که کیفیت، صداقت و نوآوری پایه‌های اصلی یک کسب‌وکار پایدار هستند.  
-        در <strong style="color:hsl(27,79%,60%)">Sahand Apex</strong>، تلاش می‌کنیم هر تعامل، تجربه‌ای مثبت و حرفه‌ای برای مشتریان باشد.
-      </p>
+    ما باور داریم که کیفیت، اعتماد و نوآوری پایه‌های اصلی هر همکاری پایدار هستند و تمام تلاش خود را می‌کنیم تا با پشتیبانی قوی و دقیق، هر تعامل با مشتریان و شرکای تجاری به تجربه‌ای قابل اعتماد و حرفه‌ای تبدیل شود؛ محصولات مورد نیاز شما با برنامه‌ریزی و مدیریت دقیق در بازه زمانی ۳ تا ۴ ماه آماده تحویل می‌شوند تا نیازهای کسب‌وکارها به صورت مطمئن و قابل پیش‌بینی پاسخ داده شود.     </p>
     </div>
 
     <!-- سه ستون ارزش‌ها -->
@@ -40,8 +38,8 @@
     </div>
 
     <!-- جمله انگیزشی پایانی -->
-    <blockquote style="margin-top:4rem; font-size:1.4rem; font-style:italic; color:hsl(27,79%,70%); line-height:1.8;" class="fadeIn" data-delay="0.8s">
-      "اعتماد، سرمایه‌ی اصلی ماست."
+    <blockquote style="margin-top:2rem; font-size:1.4rem; font-style:italic; color:hsl(27,79%,70%); line-height:1.8;" class="fadeIn" data-delay="0.8s">
+      "اعتماد شما به ما، سرمایه‌ی اصلی ماست."
     </blockquote>
   </div>
 
