--- a/petshop.html
+++ b/petshop.html
@@ -24,21 +24,21 @@
         <div style="position:relative; z-index:1; color:hsl(0,0%,98%); text-align:center;">
           <div style="font-size:4rem; margin-bottom:1rem;">🐶</div>
           <h3 style="font-size:1.75rem; font-weight:700; margin-bottom:0.5rem;">محصولات حیوانات خانگی</h3>
-          <p style="color:rgba(255,255,255,0.8);">خوراک، لوازم بهداشتی و سرگرمی برای حیوانات</p>
+          <p style="color:rgba(255,255,255,0.8);">تغذیه، مراقبت بهداشتی، سرگرمی و رنگ مو مخصوص حیوانات خانگی</p>
         </div>
       </div>
 
       <!-- متن و ویژگی‌ها -->
       <div class="glass-card fadeIn" style="animation-delay:0.3s;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:2rem;">
-          برای فروشگاه‌ها و پت‌شاپ‌هایی که به دنبال <strong style="color:hsl(27,79%,52%);">محصولات حیوانات خانگی با کیفیت</strong> هستند، گروه Sahand Apex امکان ارائه محصولات متنوع و با برند اختصاصی مشتری را فراهم می‌کند.
-        </p>
+          ما طیف گسترده‌ای از محصولات حیوانات خانگی را ارائه می‌دهیم، از خوراک و لوازم بهداشتی گرفته تا اسباب‌بازی‌ها، وسایل سرگرمی و رنگ موهای مخصوص حیوانات،
+          تا فروشگاه‌ها و پت‌شاپ‌ها بتوانند تجربه‌ای متنوع، جذاب و مطمئن برای مشتریان خود فراهم کنند
 
         <!-- لیست ویژگی‌ها -->
         <div style="display:flex; flex-direction:column; gap:1rem; margin-bottom:2rem;">
-          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> خوراک با کیفیت و متنوع</div>
+          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> خوراک باکیفیت</div>
           <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> لوازم بهداشتی و مراقبت</div>
-          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> اسباب‌بازی و سرگرمی</div>
+          <div class="feature"><span style="color:hsl(27,79%,52%);">✅</span> اسباب‌بازی و رنگ مو حیوانات</div>
         </div>
 
         <!-- CTA Button -->
