--- a/office.html
+++ b/office.html
@@ -10,7 +10,7 @@
     <!-- عنوان بخش -->
     <div style="text-align:center; margin-bottom:4rem; animation:fadeIn 1s ease-out forwards;">
       <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem; color:hsl(210,100%,20%);">ملزومات اداری</h2>
-      <p style="font-size:1.1rem; color:hsl(210,30%,40%); margin-bottom:0.75rem;">زونکن و وایت برد</p>
+      <p style="font-size:1.1rem; color:hsl(210,30%,40%); margin-bottom:0.75rem;"> زونکن، وایت‌برد و چسب‌های کاربردی</p>
       <div style="width:80px; height:4px; background:hsl(27,79%,52%); margin:0 auto; border-radius:1rem;"></div>
     </div>
 
@@ -30,7 +30,8 @@
       <!-- متن و ویژگی‌ها -->
       <div class="glass-card fadeIn" style="animation-delay:0.3s;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:2rem;">
-          برای فروشگاه‌ها و کسب‌وکارهایی که به دنبال <strong style="color:hsl(27,79%,52%);">ملزومات اداری با سفارش عمده</strong> هستند، گروه Sahand Apex امکان ارائه محصولات را با برند اختصاصی مشتری فراهم می‌کند.
+          ما برای فروشگاه‌ها و کسب‌وکارهایی که به دنبال تأمین ملزومات اداری با کیفیت و به صورت عمده هستند، مجموعه‌ای کامل از محصولات ارائه می‌کنیم؛ شامل زونکن‌ها، وایت‌بردها، انواع چسب‌های نواری و ماتیکی، کاغذ و سایر ملزومات اداری. تمام محصولات ما با مدیریت دقیق سفارش، پشتیبانی قوی و زمان‌بندی مشخص، معمولاً در بازه ۳ تا ۴ ماه آماده تحویل می‌شوند تا کسب‌وکارها بتوانند نیازهای خود را به صورت مطمئن و پیش‌بینی‌شده پاسخ دهند. ما با ارائه محصولات با استاندارد بالا و خدمات حرفه‌ای، تلاش می‌کنیم همکاری بلندمدت و
+          قابل اعتماد با فروشگاه‌ها و مراکز اداری ایجاد کنیم و تجربه‌ای عملی و مطمئن برای مشتریان فراهم آوریم
         </p>
 
         <!-- لیست ویژگی‌ها -->
