--- a/office.html
+++ b/office.html
@@ -30,8 +30,12 @@
       <!-- متن و ویژگی‌ها -->
       <div class="glass-card fadeIn" style="animation-delay:0.3s;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:2rem;">
-          ما برای فروشگاه‌ها و کسب‌وکارهایی که به دنبال تأمین ملزومات اداری با کیفیت و به صورت عمده هستند، مجموعه‌ای کامل از محصولات ارائه می‌کنیم؛ شامل زونکن‌ها، وایت‌بردها، انواع چسب‌های نواری و ماتیکی، کاغذ و سایر ملزومات اداری. تمام محصولات ما با مدیریت دقیق سفارش، پشتیبانی قوی و زمان‌بندی مشخص، معمولاً در بازه ۳ تا ۴ ماه آماده تحویل می‌شوند تا کسب‌وکارها بتوانند نیازهای خود را به صورت مطمئن و پیش‌بینی‌شده پاسخ دهند. ما با ارائه محصولات با استاندارد بالا و خدمات حرفه‌ای، تلاش می‌کنیم همکاری بلندمدت و
-          قابل اعتماد با فروشگاه‌ها و مراکز اداری ایجاد کنیم و تجربه‌ای عملی و مطمئن برای مشتریان فراهم آوریم
+  ما برای فروشگاه‌ها و کسب‌وکارهایی که به دنبال <strong style="color:hsl(207,90%,54%);">تأمین ملزومات اداری با کیفیت و به صورت عمده</strong> هستند، مجموعه‌ای کامل از محصولات ارائه می‌کنیم؛ شامل 
+  <strong style="color:hsl(207,90%,54%);">زونکن‌ها، وایت‌بردها، انواع چسب‌های نواری و ماتیکی، کاغذ و سایر ملزومات اداری</strong>. 
+  تمام محصولات ما با <strong style="color:hsl(207,90%,54%);">مدیریت دقیق سفارش</strong>، <strong style="color:hsl(207,90%,54%);">پشتیبانی قوی</strong> و <strong style="color:hsl(207,90%,54%);">زمان‌بندی مشخص (۳–۴ ماه)</strong> آماده تحویل می‌شوند تا کسب‌وکارها بتوانند نیازهای خود را به صورت مطمئن و پیش‌بینی‌شده پاسخ دهند. 
+  ما با ارائه محصولات با <strong style="color:hsl(207,90%,54%);">استاندارد بالا</strong> و خدمات حرفه‌ای، تلاش می‌کنیم <strong style="color:hsl(207,90%,54%);">همکاری بلندمدت و قابل اعتماد</strong> با فروشگاه‌ها و مراکز اداری ایجاد کنیم و تجربه‌ای عملی و مطمئن برای مشتریان فراهم آوریم.
+
+
         </p>
 
         <!-- لیست ویژگی‌ها -->
