--- a/petshop.html
+++ b/petshop.html
@@ -31,8 +31,10 @@
       <!-- متن و ویژگی‌ها -->
       <div class="glass-card fadeIn" style="animation-delay:0.3s;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:2rem;">
-          ما طیف گسترده‌ای از محصولات حیوانات خانگی را ارائه می‌دهیم، از خوراک و لوازم بهداشتی گرفته تا اسباب‌بازی‌ها، وسایل سرگرمی و رنگ موهای مخصوص حیوانات،
-          تا فروشگاه‌ها و پت‌شاپ‌ها بتوانند تجربه‌ای متنوع، جذاب و مطمئن برای مشتریان خود فراهم کنند
+  ما طیف گسترده‌ای از <strong style="color:hsl(27,79%,52%);">محصولات حیوانات خانگی</strong> را ارائه می‌دهیم، شامل <strong style="color:hsl(27,79%,52%);">خوراک باکیفیت و متنوع</strong>، <strong style="color:hsl(27,79%,52%);">لوازم بهداشتی و مراقبت</strong>، <strong style="color:hsl(27,79%,52%);">اسباب‌بازی‌ها و وسایل سرگرمی</strong> و همچنین <strong style="color:hsl(27,79%,52%);">رنگ موهای مخصوص حیوانات</strong>، 
+  تا فروشگاه‌ها و پت‌شاپ‌ها بتوانند <strong style="color:hsl(27,79%,52%);">تجربه‌ای متنوع، جذاب و مطمئن برای مشتریان خود</strong> فراهم کنند. 
+  ما با <strong style="color:hsl(27,79%,52%);">پشتیبانی حرفه‌ای و عرضه سریع محصولات</strong> تلاش می‌کنیم که نیازهای کسب‌وکارها به بهترین شکل پاسخ داده شود و همکاری‌های بلندمدت و قابل اعتماد ایجاد گردد.
+
 
         <!-- لیست ویژگی‌ها -->
         <div style="display:flex; flex-direction:column; gap:1rem; margin-bottom:2rem;">
