--- a/introduction.html
+++ b/introduction.html
@@ -10,7 +10,7 @@
     
     <!-- عنوان بخش -->
     <div style="text-align:center; margin-bottom:4rem; animation:fadeIn 1s ease-out forwards;">
-      <h2 style="font-size:2.5rem; font-weight:700; color:hsl(210,100%,20%); margin-bottom:0.75rem;">معرفی کوتاه</h2>
+      <h2 style="font-size:2.5rem; font-weight:700; color:hsl(210,100%,20%); margin-bottom:0.75rem;">چگونه کار می‌کنیم</h2>
       <div style="width:80px; height:4px; background:hsl(27,79%,52%); margin:0 auto; border-radius:1rem;"></div>
     </div>
 
@@ -20,11 +20,10 @@
       <!-- متن معرفی -->
       <div style="animation:slideUp 1s ease-out forwards;">
         <p style="font-size:1.15rem; line-height:1.8; margin-bottom:1rem;">
-          گروه <strong style="color:hsl(210,100%,20%);">Sahand Apex</strong> (<em>سهند رنجبری‌پور</em>) با تجربه عملی در تولید و واردات کالا، خدمات تأمین محصول و واردات عمده را برای کسب‌وکارها و فروشگاه‌ها ارائه می‌دهد.
-        </p>
+          ما با شبکه‌ای گسترده از <strong style="color:hsl(27,79%,52%);">تأمین‌کنندگان داخلی و خارجی</strong>، محصولات <strong style="color:hsl(207,90%,54%);">پت‌شاپ</strong> و <strong style="color:hsl(207,90%,54%);">ملزومات اداری</strong> را با کیفیت بالا و در زمان مناسب برای <strong style="color:hsl(27,79%,52%);">فروشگاه‌ها و کسب‌وکارها</strong> ارائه می‌کنیم، حتی آن محصولاتی که به طور معمول در بازار ایران موجود نیستند، تا مشتریان تجربه‌ای مطمئن، متنوع و حرفه‌ای داشته باشند.
+</p>   </p>
         <p style="font-size:1.15rem; line-height:1.8;">
-          تمرکز این گروه بر ارائه راهکارهای <strong style="color:hsl(27,79%,52%);">قابل اعتماد و عملی برای بازار ایران</strong> است.
-        </p>
+          تمرکز این گروه بر ارائه <strong style="color:hsl(27,79%,52%);">راهکارهای قابل اعتماد و عملی برای بازار ایران</strong> است، به گونه‌ای که فروشگاه‌ها و کسب‌وکارها بتوانند با اطمینان کامل از کیفیت محصولات و خدمات، نیازهای خود را در حوزه پت‌شاپ و ملزومات اداری برطرف کنند و همکاری‌های بلندمدت و پایدار با تأمین‌کنندگان داخلی و خارجی داشته باشند.
       </div>
 
       <!-- کارت ویژگی‌ها -->
