--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
     <!-- لوگو و توضیح -->
     <div style="margin-bottom:2rem; animation:fadeIn 1s ease-out forwards;">
       <h2 style="font-size:1.8rem; font-weight:700; margin-bottom:0.5rem;">Sahand Apex</h2>
-      <p style="color:rgba(255,255,255,0.8); font-size:1rem;">تأمین، تولید و واردات B2B برای کسب‌وکارها</p>
+      <p style="color:rgba(255,255,255,0.8); font-size:1rem;">راهکارهای جامع B2B: تأمین، تولید و واردات برای کسب‌وکارهای ایرانی</p>
     </div>
 
     <!-- لینک‌های سریع -->
