--- a/hero.html
+++ b/hero.html
@@ -23,8 +23,8 @@
     <!-- ت
         <!-- Badge -->
     <div class="hero-badge fade-in">
-<span>⚡</span>
-<span>شریک تجاری برندهایی که به استاندارد، زمان و اعتماد اهمیت می‌دهند.</span>
+<span></span>
+<span></span>
 
     </div>
 
