--- a/hero.html
+++ b/hero.html
@@ -22,9 +22,9 @@
 
     <!-- ت
         <!-- Badge -->
-    <div class="hero-badge fade-in">
+    <!-- <div class="hero-badge fade-in">
 <span></span>
-<span></span>
+<span></span> -->
 
     </div>
 
@@ -143,6 +143,7 @@
       font-weight:600;
       cursor:pointer;
       transition:0.3s all;
+      font-size: 1.2rem;
     }
     .btn-primary:hover { background:hsl(27,79%,58%); transform:translateY(-3px); }
 
