--- a/hero.html
+++ b/hero.html
@@ -22,11 +22,11 @@
 
     <!-- ت
         <!-- Badge -->
-    <div class="hero-badge fade-in">
+    <!-- <div class="hero-badge fade-in">
 <span>⚡</span>
 <span>شریک تجاری برندهایی که به استاندارد، زمان و اعتماد اهمیت می‌دهند.</span>
 
-    </div>
+    </div> -->
 
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
