--- a/hero.html
+++ b/hero.html
@@ -129,6 +129,11 @@
 }
 
     .accent-text { color:hsl(27,79%,52%); }
+@media(max-width:768px){
+  .btn-primary {
+    font-size: 1rem;
+  }
+}
 
     .hero-desc { font-size:1.1rem; line-height:1.5; margin-bottom:2rem; }
 
