Update hero.html sub title font up

--- a/hero.html
+++ b/hero.html
@@ -148,6 +148,7 @@
       font-weight:600;
       cursor:pointer;
       transition:0.3s all;
+      font-size: 1.2rem;
     }
     .btn-primary:hover { background:hsl(27,79%,58%); transform:translateY(-3px); }
 
