--- a/hero.html
+++ b/hero.html
@@ -176,13 +176,13 @@
   padding-bottom: 1rem; /* فضای پایین برای اسکرول */
 }
 
-.hero-stats::-webkit-scrollbar {
+/* .hero-stats::-webkit-scrollbar {
   height: 6px;
 }
 .hero-stats::-webkit-scrollbar-thumb {
   background: rgba(255,255,255,0.3);
   border-radius: 3px;
-}
+} */
 
 .hero-stats .stat-card {
   flex: 1 1 150px;  /* قابلیت کوچک شدن و بزرگ شدن */
@@ -197,10 +197,10 @@
   min-width: 120px; /* حداقل عرض کارت */
 }
 
-.hero-stats .stat-card:hover {
+/* .hero-stats .stat-card:hover {
   transform: translateY(-5px) scale(1.05);
   box-shadow: 0 12px 35px rgba(0,0,0,0.15);
-}
+} */
 
 .hero-stats .stat-icon {
   font-size: 2.5rem;
