--- a/story.html
+++ b/story.html
@@ -66,10 +66,10 @@
       cursor: pointer;
     }
 
-    .story-card:hover {
+    /* .story-card:hover {
       transform: translateY(-10px) scale(1.05);
       box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-    }
+    } */
 
     .story-card .icon {
       margin-bottom: 1rem;
