--- a/footer.html
+++ b/footer.html
@@ -25,11 +25,11 @@
     </div>
 
     <!-- شبکه‌های اجتماعی -->
-    <div class="social-icons fadeIn" style="animation-delay:0.4s;">
+    <!-- <div class="social-icons fadeIn" style="animation-delay:0.4s;">
       <a href="https://instagram.com" target="_blank" title="Instagram">📸</a>
       <a href="https://linkedin.com" target="_blank" title="LinkedIn">🔗</a>
       <a href="https://twitter.com" target="_blank" title="Twitter">🐦</a>
-    </div>
+    </div> -->
 
     <!-- خط جداکننده -->
     <div style="height:1px; background:rgba(255,255,255,0.2); margin:2rem auto; max-width:600px;"></div>
