--- a/news.html
+++ b/news.html
@@ -1,4 +1,4 @@
-<!-- news.html - نسخه حرفه‌ای و جذاب -->
+<!-- news.html - نسخه حرفه‌ای و خفن -->
 <section id="news" class="news-section">
   <!-- پس‌زمینه Float تزئینی -->
   <div class="float-bg float-bg-orange"></div>
