--- a/news.html
+++ b/news.html
@@ -113,6 +113,14 @@
     /* FadeIn Animation */
     .fadeIn { opacity:0; animation:fadeIn 1s ease-out forwards; }
     @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+    .news-card {
+  opacity: 1 !important; /* کارت‌های نمونه همیشه دیده شوند */
+}
+.sample-card {
+  opacity: 1;
+  animation: none;
+}
+
   </style>
 
   <!-- کتابخانه‌ها -->
