--- a/news.html
+++ b/news.html
@@ -1,6 +1,5 @@
-<!-- news.html - نسخه حرفه‌ای و خفن -->
+<!-- news.html - نسخه حرفه‌ای و پایدار -->
 <section id="news" class="news-section">
-  <!-- پس‌زمینه Float تزئینی -->
   <div class="float-bg float-bg-orange"></div>
   <div class="float-bg float-bg-green"></div>
 
@@ -14,7 +13,7 @@
 
     <!-- Grid کارت‌ها -->
     <div class="news-grid" id="news-grid">
-      <!-- کارت نمونه ۱ -->
+      <!-- کارت نمونه اولیه -->
       <div class="news-card fadeIn">
         <img src="https://via.placeholder.com/400x250" alt="عنوان مقاله ۱">
         <div class="news-content">
@@ -24,7 +23,6 @@
           <a href="article1.html" class="read-more">ادامه مطلب →</a>
         </div>
       </div>
-      <!-- کارت نمونه ۲ -->
       <div class="news-card fadeIn">
         <img src="https://via.placeholder.com/400x250" alt="عنوان مقاله ۲">
         <div class="news-content">
@@ -37,7 +35,7 @@
     </div>
 
     <!-- دکمه Load More -->
-    <div class="load-more-container fadeIn">
+    <div class="load-more-container">
       <button id="load-more" class="btn-primary">مقالات بیشتر</button>
     </div>
   </div>
@@ -49,29 +47,25 @@
       background: hsl(0,0%,96%);
       padding: 6rem 1rem;
       color: hsl(210,100%,20%);
-      overflow: hidden;
       font-family:'Vazirmatn','IBM Plex Sans',sans-serif;
+      overflow: hidden;
     }
     .container { max-width: 1200px; margin: auto; position: relative; z-index: 2; }
 
-    /* Float پس‌زمینه */
     .float-bg { position: absolute; border-radius:50%; filter:blur(120px); animation:float 8s ease-in-out infinite; }
     .float-bg-orange { top:-80px; left:-60px; width:250px; height:250px; background: rgba(230,126,34,0.08); }
     .float-bg-green { bottom:-100px; right:-50px; width:300px; height:300px; background: rgba(27,79,52,0.06); animation-delay:1s; }
 
     @keyframes float { 0%,100%{transform:translateY(0);}50%{transform:translateY(-15px);} }
 
-    /* عنوان بخش */
     .section-header { text-align:center; margin-bottom:4rem; }
     .section-header h2 { font-size:2.8rem; font-weight:700; margin-bottom:1rem; background: linear-gradient(90deg, hsl(27,79%,52%), hsl(210,100%,20%)); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
     .divider { width:100px; height:4px; background:hsl(27,79%,52%); margin:0 auto 1.5rem auto; border-radius:1rem; }
     .section-header p { font-size:1.1rem; color:hsl(210,30%,40%); max-width:700px; margin:auto; }
 
-    /* Grid کارت‌ها */
     .news-grid { display:grid; grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); gap:2rem; }
     @media(max-width:768px){ .news-grid { grid-template-columns:1fr; gap:1.5rem; } }
 
-    /* کارت‌ها */
     .news-card {
       background: rgba(255,255,255,0.85);
       backdrop-filter: blur(20px);
@@ -82,7 +76,7 @@
       cursor:pointer;
       display:flex;
       flex-direction: column;
-      height:100%;
+      opacity: 1; /* کارت‌های اولیه همیشه دیده شوند */
     }
     .news-card:hover { transform: translateY(-10px) scale(1.02); box-shadow: 0 20px 40px rgba(0,0,0,0.2); }
     .news-card img { width:100%; height:180px; object-fit:cover; transition: transform 0.5s; }
@@ -95,7 +89,6 @@
     .read-more { font-weight:600; color:hsl(27,79%,52%); text-decoration:none; align-self:flex-start; transition: color 0.3s; }
     .read-more:hover { color:hsl(27,79%,58%); text-decoration:underline; }
 
-    /* دکمه Load More */
     .load-more-container { text-align:center; margin-top:3rem; }
     .btn-primary {
       background:hsl(27,79%,52%);
@@ -110,26 +103,20 @@
     }
     .btn-primary:hover { background:hsl(27,79%,58%); transform:translateY(-3px) scale(1.05); box-shadow:0 10px 25px rgba(0,0,0,0.2); }
 
-    /* FadeIn Animation */
-    .fadeIn { opacity:0; animation:fadeIn 1s ease-out forwards; }
+    .fadeIn { opacity:0; animation:fadeIn 0.8s ease-out forwards; }
     @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
-    .news-card {
-  opacity: 1 !important; /* کارت‌های نمونه همیشه دیده شوند */
-}
-.sample-card {
-  opacity: 1;
-  animation: none;
-}
-
   </style>
 
   <!-- کتابخانه‌ها -->
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
   <!-- JS حرفه‌ای Load More -->
   <script>
     document.addEventListener('DOMContentLoaded', function(){
       const grid = document.getElementById('news-grid');
+
+      // ساخت Masonry فقط یکبار
       const masonry = new Masonry(grid, {
         itemSelector: '.news-card',
         columnWidth: '.news-card',
@@ -137,12 +124,19 @@
         gutter: 20
       });
 
-      document.getElementById('load-more').addEventListener('click', async ()=>{
+      // اطمینان از بارگذاری تصاویر قبل از layout
+      imagesLoaded(grid, function() {
+        masonry.layout();
+      });
+
+      // Load More
+      const loadBtn = document.getElementById('load-more');
+      loadBtn.addEventListener('click', async () => {
         try {
           const res = await fetch('articles.json');
           const articles = await res.json();
-          const newCards = [];
-          articles.forEach(article=>{
+
+          const newCards = articles.map(article => {
             const card = document.createElement('div');
             card.className = 'news-card fadeIn';
             card.innerHTML = `
@@ -154,9 +148,15 @@
                 <a href="${article.link}" class="read-more">ادامه مطلب →</a>
               </div>`;
             grid.appendChild(card);
-            newCards.push(card);
+            return card;
           });
-          masonry.appended(newCards);
+
+          // منتظر بارگذاری تصاویر جدید
+          imagesLoaded(grid, function() {
+            masonry.appended(newCards);
+            masonry.layout();
+          });
+
         } catch(err){ console.error(err); }
       });
     });
